Finished implementation of median filter on mpi
Added Boost Program Options to the program for easier user interface
Added Mpi support for multiple machines support
Time counting is missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,27 @@
 cmake_minimum_required(VERSION 3.1)
-project(CLUSTER)
 
+project(Cluster)
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
-
-find_package(MPI REQUIRED)
-find_package( OpenCV REQUIRED )
 
 include_directories(${MPI_INCLUDE_PATH})
 
-add_executable(median src/median.cpp)
-target_link_libraries(median  ${OpenCV_LIBS} ${MPI_LIBRARIES})
+
+add_executable(Cluster src/median.cpp)
+
+find_package(MPI REQUIRED)
+find_package( OpenCV REQUIRED )
+find_package( Boost COMPONENTS program_options REQUIRED )
+
+set_property(TARGET Cluster PROPERTY CXX_STANDARD 11)
+
+target_link_libraries(Cluster ${OpenCV_LIBS}  ${Boost_LIBRARIES} ${MPI_LIBRARIES})
 
 if(MPI_COMPILE_FLAGS)
-  set_target_properties(median PROPERTIES
+  set_target_properties(Cluster PROPERTIES
     COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
 endif()
 
 if(MPI_LINK_FLAGS)
-  set_target_properties(median PROPERTIES
+  set_target_properties(Cluster PROPERTIES
     LINK_FLAGS "${MPI_LINK_FLAGS}")
 endif()
-
